fix content alignment style

--- a/examples/style.css
+++ b/examples/style.css
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-left: 20px;
   padding-right: 20px;
   max-width: 1200px;
+  margin: auto;
 }
 
 .color-block-wrapper {
